rm old_index.php not needed, fix footer to not run into text when screen is smaller. Made footer have smaller footprint (40px high instead of 60px). Adding spacing such that logo is higher but margin at bottom of main div pushes footer down without run on. NBCC logo is actually part of background image, should be fixed in later iterations to not have logo overlay it.... could pad it perhaps or change the way banner is implemented

--- a/css/defaultLogin.css
+++ b/css/defaultLogin.css
@@ -1,36 +1,29 @@
-
-
 /*
 To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 */
-/* 
+
+/*
     Created on : Jan 15, 2018, 10:19:41 AM
     Author     : Mark Patterson
 */
 
-            html, body {
-                width: 100%;
-                height: 100%;
-                background-image: url("../Resources/BackGround.png");
-                position: fixed;
-		background-size: cover !important;
-		background-attachment: fixed !important;
-                overflow-x: hidden;
-                /*overflow-y: hidden;*/
-            }z
-            
-            #pageContent{
-                width: 70%;
-                padding-top: 170px;
-                margin-left: auto !important;
-                margin-right: auto !important;
-                text-align: center;
-            }
-            
-            
-            
-            
-            
-            
+html, body {
+  width: 100%;
+  height: 100%;
+  background-image: url("../Resources/BackGround.png");
+  position: fixed;
+  background-size: cover !important;
+  background-attachment: fixed !important;
+  overflow-x: hidden;
+  /*overflow-y: hidden;*/
+}
+
+z #pageContent {
+  width: 70%;
+  padding-top: 170px;
+  margin-left: auto !important;
+  margin-right: auto !important;
+  text-align: center;
+}
