--- a/css/footerStyle.css
+++ b/css/footerStyle.css
@@ -13,8 +13,8 @@ and open the template in the editor.
 position: fixed;
 bottom: 0;
 width: 100%;
-height: 60px;
-line-height: 60px;
+height: 40px;
+line-height: 30px;
 background-color: #00293a;
 color: white;
 text-align: center;
